# xenomai

./: configure.ac
utils/: Makefile.am
utils/cmake/: Makefile.am
